# akosha

./: .coverage  .env.example  .envrc  .gitignore  .lycheecache  .lycheeignore  .mcp.json  ADMIN_SHELL_IMPLEMENTATION_SUMMARY.md  AGENTS.md  AKOSHA_ALERTING_COMPLETE.md  AKOSHA_AUTHENTICATION_IMPLEMENTATION.md  CHANGELOG.md  CHECKPOINT_REPORT_2025-02-03.md  CLAUDE.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  ECOSYSTEM_IMPROVEMENT_TRACK2_COMPLETE.md  OPERATIONAL_MODES_COMPLETE.md  OPERATIONAL_MODES_PLAN.md  OPERATIONAL_MODES_QUICK_START.md  OPERATIONAL_MODES_QUICK_START.md.backup  OPERATIONAL_MODES_QUICK_START.md.backup.json  QUICKSTART.md  README.md  RULES.md  TEST_EXPANSION_SUMMARY.md  TEST_QUICK_REFERENCE.md  complexipy_results_2026_02_10__02-41-16.json  coverage.json  main.py  mypy.ini  prometheus.yml  pyproject.toml  start_mcp.sh
.claude-plugin/: plugin.json
.claude/handoff/: session_handoff_20260129_000142.md
.oneiric_cache/: runtime_health.json  runtime_telemetry.json  workflow_checkpoints.sqlite
akasha/: __init__.py  config.py  main.py
akasha/ingestion/: worker.py
akasha/models/: __init__.py
akasha/observability/: __init__.py  tracing.py
akasha/processing/: analytics.py  deduplication.py  embeddings.py  knowledge_graph.py
akasha/resilience/: __init__.py  circuit_breaker.py
akasha/storage/: hot_store.py  warm_store.py
akasha_mcp/: __init__.py  __main__.py  main.py
akasha_mcp/tools/: __init__.py  akasha_tools.py  tool_registry.py
akosha/: __init__.py  __main__.py  cli.py  cli.py.backup  cli.py.backup.json  config.py  config.py.backup  config.py.backup.json  main.py  security.py
akosha/alerting/: __init__.py  __init__.py.backup  __init__.py.backup.json
akosha/api/: middleware.py  middleware.py.backup  middleware.py.backup.json
akosha/ingestion/: __init__.py  code_graph_ingester.py  orchestrator.py  worker.py  worker.py.backup  worker.py.backup.json
akosha/mcp/: __init__.py  __main__.py  auth.py  auth.py.backup  auth.py.backup.json  client.py  rate_limit.py  server.py  server.py.backup  server.py.backup.json  validation.py
akosha/models/: __init__.py  schemas.py
akosha/modes/: __init__.py  base.py  lite.py  standard.py
akosha/monitoring/: metrics.py  metrics.py.backup  metrics.py.backup.json
akosha/observability/: __init__.py  eventbridge_adapter.py  eventbridge_publisher.py  eventbridge_resolver.py  prometheus_metrics.py  security_logging.py  tracing.py
akosha/processing/: analytics.py  deduplication.py  embeddings.py  fitness_analyzer.py  knowledge_graph.py  knowledge_graph.py.backup  knowledge_graph.py.backup.json
akosha/query/: __init__.py  aggregator.py  distributed.py
akosha/resilience/: __init__.py  circuit_breaker.py
akosha/scripts/: generate_secrets.py
akosha/shell/: __init__.py  adapter.py  adapter.py.backup.json
akosha/storage/: __init__.py  aging.py  cold_store.py  hot_store.py  models.py  path_resolver.py  pgvector_hot_store.py  pgvector_hot_store.py.backup  pgvector_hot_store.py.backup.json  sharding.py  warm_store.py
akosha/websocket/: __init__.py  auth.py  server.py  server.py.backup  server.py.backup.json  tls_config.py
commands/: akosha-analyze.md  akosha-search.md
config/: akasha.yaml  akosha.yaml  lite.yaml  standard.yaml
data/warm/: warm.db
docs/: ADMIN_SHELL.md  ADMIN_SHELL.md.backup  ADR_001_ARCHITECTURE_DECISIONS.md  AKASHA_IMPLEMENTATION_GUIDE.md  AKASHA_STORAGE_ARCHITECTURE.md  AKOSHA_IMPLEMENTATION_GUIDE.md  AKOSHA_IMPLEMENTATION_GUIDE.md.backup.json  AKOSHA_STORAGE_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE.md.backup  ARCHITECTURE.md.backup.json  CHECKPOINT_2025-01-27.md  CHECKPOINT_2025-01-28.md  COMPREHENSIVE_ARCHITECTURE_REVIEW_2025-01-31.md  CRITICAL_PATH_EXECUTION_SUMMARY.md  CURRENT_IDENTIFIER_ANALYSIS.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  DISTRIBUTED_SYSTEMS_INTEGRATION_REVIEW.md  IMPLEMENTATION_GUIDE.md  MASTER_COMPLETION_SUMMARY.md  PATH_MIGRATION_GUIDE.md  PHASE_2_ADVANCED_FEATURES.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_3_ENHANCEMENTS_COMPLETE.md  PHASE_3_OTEL_CIRCUIT_BREAKERS_COMPLETE.md  PHASE_3_PRODUCTION_HARDENING.md  PHASE_4_SCALE_PREPARATION.md  PROJECT_STRUCTURE.md  PROMETHEUS_METICS.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  RULES.md  SECRET_MANAGEMENT.md  SECRET_MANAGEMENT.md.backup.json  USER_GUIDE.md  USER_GUIDE.md.backup  USER_GUIDE.md.backup.json  WARM_TIER_QUICKSTART.md  (+5 more)
docs/archive/: README.md
docs/guides/: operational-modes.md  operational-modes.md.backup  operational-modes.md.backup.json
docs/plans/: PLAN_INDEX.md
docs/reference/: service-dependencies.md
docs/runbooks/: CLOUD_STORAGE_OUTAGE.md  CLOUD_STORAGE_OUTAGE.md.backup  CLOUD_STORAGE_OUTAGE.md.backup.json  DEPLOYMENT_ROLLBACK.md  GRACEFUL_SHUTDOWN.md  HOT_STORE_FAILURE.md  INGESTION_BACKLOG.md  MAHAVISHNU_DOWN.md  MILVUS_FAILURE.md  MILVUS_FAILURE.md.backup  MILVUS_FAILURE.md.backup.json
docs/schemas/: document-frontmatter-v1.md  (+1 more)
k8s/: README.md  README.md.backup  README.md.backup.json  configmap.yaml  deploy.sh  deployment.yaml  hpa.yaml  kustomization.yaml  limitrange.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc-cache.yaml  pvc-data.yaml  pvc.yaml  resourcequota-quota.yaml  resourcequota.yaml  role.yaml  rolebinding.yaml  secret.production.yaml.template  secret.yaml  service-clusterip.yaml  service-nodeport.yaml  service.yaml  serviceaccount.yaml
kubernetes/: README.md  README.md.backup  README.md.backup.json  aging.yaml  configmap.yaml  hot-store.yaml  ingestion.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  query.yaml  secrets.yaml  services.yaml  warm-store.yaml
monitoring/: README.md  alerts.yaml
scripts/: _frontmatter_apply_akosha.py  dev-start.sh  fix_crackerjack_refurb_timeout.py
settings/: akosha.yaml
tests/: conftest.py  test_aging_service_coverage.py  test_code_graph_tools_coverage.py  test_hot_store_coverage.py  test_path_resolver_coverage.py  test_prometheus_metrics_coverage.py  test_pycharm_tools_coverage.py  test_security_coverage.py  test_session_buddy_tools_coverage.py  test_validation_coverage.py
(+127 files in other folders)
