[project]
name = "akasha"
version = "0.1.0"
description = "Universal Memory Aggregation System - Cross-system intelligence for Session-Buddy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "duckdb>=0.10.0",
    "oneiric>=0.1.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.0.0",
    "opentelemetry-instrumentation-asyncio>=0.0.0",
    "opentelemetry-exporter-otlp>=1.0.0",
    "opentelemetry-exporter-prometheus>=0.40b0,<1.0.0",
    "prometheus-client>=0.20.0",
    "numpy>=2.0.0",
    "tenacity>=9.0.0",
    "fastmcp>=2.14.0",
    "circuitbreaker>=2.0.0",
    "pybreaker>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

embeddings = [
    "onnxruntime>=1.17.0",
    "transformers>=4.21.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=akasha",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["akasha"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
fail_under = 85

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
