[project]
name = "akosha"
version = "0.1.0"
description = "Universal Memory Aggregation System - Cross-system intelligence for Session-Buddy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "duckdb>=0.10.0",
    "oneiric>=0.1.0",
    "typer>=0.12.0",  # CLI framework
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.0.0",
    "opentelemetry-instrumentation-asyncio>=0.0.0",
    "opentelemetry-exporter-otlp>=1.0.0",
    "opentelemetry-exporter-prometheus>=0.40b0,<1.0.0",
    "prometheus-client>=0.20.0",
    "numpy>=2.0.0",
    "tenacity>=9.0.0",
    "fastmcp>=2.14.0",
    "circuitbreaker>=2.0.0",
    "pybreaker>=1.0.0",
    "pyjwt>=2.9.0",  # JWT authentication support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "codespell>=2.2.0",
    "refurb>=0.0.0",
    "complexipy>=0.0.0",
    "creosote>=3.0.0",
    "pyright>=1.1.0",
    "crackerjack>=0.48.0",
]

embeddings = [
    "onnxruntime>=1.17.0",
    "transformers>=4.21.0",
    "sentence-transformers>=2.2.0",
]


[project.scripts]
akosha = "akosha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "codespell>=2.2.0",
    "refurb>=0.0.0",
    "complexipy>=0.0.0",
    "creosote>=3.0.0",
    "pyright>=1.1.0",
    "crackerjack>=0.48.0",
    "pyarrow>=23.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "k8s/**",  # Kubernetes YAML manifests
    "scripts/**",  # Utility scripts
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line length handled by formatter
    "UP007",  # Optional[X] -> X | None (not ready for Python 3.13)
    "RUF012", # Mutable class attributes (too strict)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]  # Allow unused arguments in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=akosha",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
    "stress: marks tests as stress tests",
    "flaky: marks tests as flaky (may fail intermittently)",
    "network: marks tests that require network access",
    "expensive: marks tests that are expensive to run (compute/time)",
    "security: marks tests that verify security properties",
    "maintenance: marks tests for maintenance tasks",
]

[tool.coverage.run]
source = ["akosha"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
fail_under = 85

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "error"

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]  # Allow assert statements in code

[tool.codespell]
ignore-words-list = "akosha,SessionBuddy"
skip = "*.lock,*.min.js"

[tool.refurb]
python_version = "3.13"

[tool.complexipy]
max_complexity = 15
exclude = [
    "tests/*",
    "*/test_*.py",
]

[tool.creosote]
paths = ["akosha"]
deps_file = "pyproject.toml"
sections = ["project", "project.optional-dependencies"]
exclude_deps = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
